[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UserInterface/CoinsCounter.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/art/background/volcano new and improved1.png" type="Texture" id=2]
[ext_resource path="res://assets/theme/STI_Theme.tres" type="Theme" id=3]
[ext_resource path="res://src/UserInterface/Shop.gd" type="Script" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 360, 160 )
texture = ExtResource( 2 )

[node name="CoinsCounter" parent="." instance=ExtResource( 1 )]
margin_left = 306.0
margin_top = 77.0
margin_right = 406.0
margin_bottom = 122.0

[node name="ShopTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -232.0
margin_top = 24.0
margin_bottom = 43.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 3 )
text = "Shop"
align = 1

[node name="Stone" type="Button" parent="."]
margin_left = 16.0
margin_top = 160.0
margin_right = 208.0
margin_bottom = 272.0
focus_neighbour_right = NodePath("../Credits")
theme = ExtResource( 3 )
action_mode = 0
text = "Start with Stone"
clip_text = true
expand_icon = true

[node name="BiggerIsland" type="Button" parent="."]
margin_left = 264.0
margin_top = 160.0
margin_right = 456.0
margin_bottom = 272.0
focus_neighbour_right = NodePath("../Credits")
theme = ExtResource( 3 )
action_mode = 0
text = "Bigger Island"
expand_icon = true

[node name="OneFreeHit" type="Button" parent="."]
margin_left = 512.0
margin_top = 160.0
margin_right = 704.0
margin_bottom = 272.0
focus_neighbour_right = NodePath("../Credits")
theme = ExtResource( 3 )
action_mode = 0
text = "One Free Hit"
clip_text = true
expand_icon = true

[node name="StoneCost" parent="." instance=ExtResource( 1 )]
margin_left = 56.0
margin_top = 224.0
margin_right = 168.0
margin_bottom = 269.0

[node name="IslandCost" parent="." instance=ExtResource( 1 )]
margin_left = 304.0
margin_top = 224.0
margin_right = 416.0
margin_bottom = 269.0

[node name="FreeHitCost" parent="." instance=ExtResource( 1 )]
margin_left = 552.0
margin_top = 224.0
margin_right = 664.0
margin_bottom = 269.0

[connection signal="pressed" from="Stone" to="." method="_on_Stone_pressed"]
[connection signal="pressed" from="BiggerIsland" to="." method="_on_BiggerIsland_pressed"]
[connection signal="pressed" from="OneFreeHit" to="." method="_on_OneFreeHit_pressed"]
